// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SimplexScreen renders correctly 1`] = `
<View
  style={
    {
      "flex": 1,
      "justifyContent": "center",
      "overflow": "hidden",
      "position": "relative",
    }
  }
>
  <View
    style={
      {
        "display": "flex",
        "flexDirection": "column",
        "height": "100%",
        "justifyContent": "space-between",
      }
    }
  >
    <View
      style={
        [
          {
            "paddingHorizontal": 16,
            "paddingVertical": 16,
          },
        ]
      }
    >
      <Modal
        animationType="none"
        deviceHeight={1334}
        deviceWidth={null}
        hardwareAccelerated={false}
        hideModalContentWhileAnimating={false}
        onBackdropPress={[Function]}
        onModalHide={[Function]}
        onModalWillHide={[Function]}
        onModalWillShow={[Function]}
        onRequestClose={[Function]}
        panResponderThreshold={4}
        scrollHorizontal={false}
        scrollOffset={0}
        scrollOffsetMax={0}
        scrollTo={null}
        statusBarTranslucent={true}
        supportedOrientations={
          [
            "portrait",
            "landscape",
          ]
        }
        swipeThreshold={100}
        transparent={true}
        visible={false}
      />
      <Modal
        animationType="none"
        deviceHeight={1334}
        deviceWidth={null}
        hardwareAccelerated={false}
        hideModalContentWhileAnimating={false}
        onBackdropPress={[Function]}
        onModalHide={[Function]}
        onModalWillHide={[Function]}
        onModalWillShow={[Function]}
        onRequestClose={[Function]}
        panResponderThreshold={4}
        scrollHorizontal={false}
        scrollOffset={0}
        scrollOffsetMax={0}
        scrollTo={null}
        statusBarTranslucent={true}
        supportedOrientations={
          [
            "portrait",
            "landscape",
          ]
        }
        swipeThreshold={100}
        transparent={true}
        visible={false}
      />
      <View
        style={
          [
            {
              "display": "flex",
              "flexDirection": "row",
              "fontFamily": "RedHatDisplayRegular",
              "fontSize": 12,
              "justifyContent": "space-between",
              "lineHeight": 24,
              "paddingVertical": 4,
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "fontFamily": "RedHatDisplayRegular",
                "fontSize": 12,
                "lineHeight": 24,
              },
            ]
          }
        >
          amount
           (
          cUSD
          )
        </Text>
        <Text
          style={
            [
              {
                "fontFamily": "RedHatDisplayRegular",
                "fontSize": 12,
                "lineHeight": 24,
              },
            ]
          }
        >
          <Text
            style={
              [
                [],
                {
                  "color": undefined,
                },
              ]
            }
            testID="undefined/value"
          >
            25.00
          </Text>
        </Text>
      </View>
      <View
        style={
          [
            {
              "display": "flex",
              "flexDirection": "row",
              "fontFamily": "RedHatDisplayRegular",
              "fontSize": 12,
              "justifyContent": "space-between",
              "lineHeight": 24,
              "paddingVertical": 4,
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "fontFamily": "RedHatDisplayRegular",
                "fontSize": 12,
                "lineHeight": 24,
              },
              {
                "color": "#666666",
              },
            ]
          }
        >
          pricePer, {"coin":"cUSD"}
        </Text>
        <Text
          style={
            [
              {
                "fontFamily": "RedHatDisplayRegular",
                "fontSize": 12,
                "lineHeight": 24,
              },
              {
                "color": "#666666",
              },
            ]
          }
        >
          <Text
            style={
              [
                [
                  {
                    "color": "#666666",
                  },
                ],
                {
                  "color": "#666666",
                },
              ]
            }
            testID="undefined/value"
          >
            $
            0.76
          </Text>
        </Text>
      </View>
      <View
        style={
          [
            {
              "backgroundColor": "#E6E6E6",
              "height": 1,
              "marginVertical": 16,
              "width": "100%",
            },
          ]
        }
      />
      <View
        style={
          [
            {
              "display": "flex",
              "flexDirection": "row",
              "fontFamily": "RedHatDisplayRegular",
              "fontSize": 12,
              "justifyContent": "space-between",
              "lineHeight": 24,
              "paddingVertical": 4,
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "fontFamily": "RedHatDisplayRegular",
                "fontSize": 12,
                "lineHeight": 24,
              },
            ]
          }
        >
          subtotal
        </Text>
        <Text
          style={
            [
              {
                "fontFamily": "RedHatDisplayRegular",
                "fontSize": 12,
                "lineHeight": 24,
              },
            ]
          }
        >
          <Text
            style={
              [
                [],
                {
                  "color": undefined,
                },
              ]
            }
            testID="undefined/value"
          >
            $
            19.00
          </Text>
        </Text>
      </View>
      <View
        style={
          [
            {
              "display": "flex",
              "flexDirection": "row",
              "fontFamily": "RedHatDisplayRegular",
              "fontSize": 12,
              "justifyContent": "space-between",
              "lineHeight": 24,
              "paddingVertical": 4,
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "display": "flex",
                "flexDirection": "row",
              },
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontFamily": "RedHatDisplayRegular",
                  "fontSize": 12,
                  "lineHeight": 24,
                },
              ]
            }
          >
            Simplex
             
            fee
          </Text>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            focusable={true}
            hitSlop={
              {
                "bottom": 10,
                "left": 10,
                "right": 10,
                "top": 10,
              }
            }
            nativeBackgroundAndroid={
              {
                "attribute": "selectableItemBackground",
                "rippleRadius": undefined,
                "type": "ThemeAttrAndroid",
              }
            }
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "marginLeft": 6,
                  "position": "relative",
                  "top": 5,
                },
              ]
            }
          >
            <svg
              fill="none"
              height={28}
              viewBox="0 0 16 16"
              width={28}
            >
              <circle
                cx="8"
                cy="8"
                r="7"
                stroke="#757575"
                strokeWidth="1.25"
              />
              <path
                d="M8 12V7M8 6V5"
                stroke="#757575"
                strokeWidth="1.25"
              />
            </svg>
          </View>
        </View>
        <Text>
          <Text
            style={
              [
                [
                  {
                    "fontFamily": "RedHatDisplayRegular",
                    "fontSize": 12,
                    "lineHeight": 24,
                  },
                ],
                {
                  "color": undefined,
                },
              ]
            }
            testID="undefined/value"
          >
            $
            7.00
          </Text>
        </Text>
      </View>
      <View
        style={
          [
            {
              "display": "flex",
              "flexDirection": "row",
              "fontFamily": "RedHatDisplayRegular",
              "fontSize": 12,
              "justifyContent": "space-between",
              "lineHeight": 24,
              "paddingVertical": 4,
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "fontFamily": "RedHatDisplayRegular",
                "fontSize": 12,
                "lineHeight": 24,
              },
              {
                "fontFamily": "RedHatDisplaySemiBold",
                "fontSize": 12,
                "lineHeight": 24,
              },
            ]
          }
        >
          Total
        </Text>
        <Text
          style={
            [
              {
                "fontFamily": "RedHatDisplayRegular",
                "fontSize": 12,
                "lineHeight": 24,
              },
              {
                "fontFamily": "RedHatDisplaySemiBold",
                "fontSize": 12,
                "lineHeight": 24,
              },
            ]
          }
        >
          <Text
            style={
              [
                [
                  {
                    "fontFamily": "RedHatDisplaySemiBold",
                    "fontSize": 12,
                    "lineHeight": 24,
                  },
                ],
                {
                  "color": undefined,
                },
              ]
            }
            testID="undefined/value"
          >
            $
            26.00
          </Text>
        </Text>
      </View>
    </View>
    <View
      pointerEvents="box-none"
    >
      <View
        pointerEvents="box-none"
        style={
          [
            {
              "borderRadius": 15,
              "flexGrow": 1,
              "width": "100%",
            },
            {},
          ]
        }
      >
        <View
          style={
            [
              {
                "flexDirection": "column",
              },
              {
                "margin": 16,
              },
            ]
          }
        >
          <View
            style={
              [
                {
                  "overflow": "hidden",
                },
                {
                  "borderRadius": 100,
                },
              ]
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": true,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              focusable={false}
              nativeBackgroundAndroid={
                {
                  "attribute": "selectableItemBackground",
                  "rippleRadius": undefined,
                  "type": "ThemeAttrAndroid",
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "#2F4ACD",
                    "flexDirection": "row",
                    "flexGrow": 1,
                    "height": 48,
                    "justifyContent": "center",
                    "opacity": 0.25,
                    "paddingHorizontal": 24,
                    "paddingVertical": 5,
                    "width": "100%",
                  },
                  undefined,
                ]
              }
            >
              <ActivityIndicator
                color="#FFFFFF"
                size="small"
                testID="Button/Loading"
              />
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`SimplexScreen renders correctly 2`] = `
<View
  style={
    {
      "flex": 1,
      "justifyContent": "center",
      "overflow": "hidden",
      "position": "relative",
    }
  }
>
  <View
    style={
      {
        "display": "flex",
        "flexDirection": "column",
        "height": "100%",
        "justifyContent": "space-between",
      }
    }
  >
    <View
      style={
        [
          {
            "paddingHorizontal": 16,
            "paddingVertical": 16,
          },
        ]
      }
    >
      <Modal
        animationType="none"
        deviceHeight={1334}
        deviceWidth={null}
        hardwareAccelerated={false}
        hideModalContentWhileAnimating={false}
        onBackdropPress={[Function]}
        onModalHide={[Function]}
        onModalWillHide={[Function]}
        onModalWillShow={[Function]}
        onRequestClose={[Function]}
        panResponderThreshold={4}
        scrollHorizontal={false}
        scrollOffset={0}
        scrollOffsetMax={0}
        scrollTo={null}
        statusBarTranslucent={true}
        supportedOrientations={
          [
            "portrait",
            "landscape",
          ]
        }
        swipeThreshold={100}
        transparent={true}
        visible={false}
      />
      <Modal
        animationType="none"
        deviceHeight={1334}
        deviceWidth={null}
        hardwareAccelerated={false}
        hideModalContentWhileAnimating={false}
        onBackdropPress={[Function]}
        onModalHide={[Function]}
        onModalWillHide={[Function]}
        onModalWillShow={[Function]}
        onRequestClose={[Function]}
        panResponderThreshold={4}
        scrollHorizontal={false}
        scrollOffset={0}
        scrollOffsetMax={0}
        scrollTo={null}
        statusBarTranslucent={true}
        supportedOrientations={
          [
            "portrait",
            "landscape",
          ]
        }
        swipeThreshold={100}
        transparent={true}
        visible={false}
      />
      <View
        style={
          [
            {
              "display": "flex",
              "flexDirection": "row",
              "fontFamily": "RedHatDisplayRegular",
              "fontSize": 12,
              "justifyContent": "space-between",
              "lineHeight": 24,
              "paddingVertical": 4,
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "fontFamily": "RedHatDisplayRegular",
                "fontSize": 12,
                "lineHeight": 24,
              },
            ]
          }
        >
          amount
           (
          cUSD
          )
        </Text>
        <Text
          style={
            [
              {
                "fontFamily": "RedHatDisplayRegular",
                "fontSize": 12,
                "lineHeight": 24,
              },
            ]
          }
        >
          <Text
            style={
              [
                [],
                {
                  "color": undefined,
                },
              ]
            }
            testID="undefined/value"
          >
            25.00
          </Text>
        </Text>
      </View>
      <View
        style={
          [
            {
              "display": "flex",
              "flexDirection": "row",
              "fontFamily": "RedHatDisplayRegular",
              "fontSize": 12,
              "justifyContent": "space-between",
              "lineHeight": 24,
              "paddingVertical": 4,
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "fontFamily": "RedHatDisplayRegular",
                "fontSize": 12,
                "lineHeight": 24,
              },
              {
                "color": "#666666",
              },
            ]
          }
        >
          pricePer, {"coin":"cUSD"}
        </Text>
        <Text
          style={
            [
              {
                "fontFamily": "RedHatDisplayRegular",
                "fontSize": 12,
                "lineHeight": 24,
              },
              {
                "color": "#666666",
              },
            ]
          }
        >
          <Text
            style={
              [
                [
                  {
                    "color": "#666666",
                  },
                ],
                {
                  "color": "#666666",
                },
              ]
            }
            testID="undefined/value"
          >
            $
            0.76
          </Text>
        </Text>
      </View>
      <View
        style={
          [
            {
              "backgroundColor": "#E6E6E6",
              "height": 1,
              "marginVertical": 16,
              "width": "100%",
            },
          ]
        }
      />
      <View
        style={
          [
            {
              "display": "flex",
              "flexDirection": "row",
              "fontFamily": "RedHatDisplayRegular",
              "fontSize": 12,
              "justifyContent": "space-between",
              "lineHeight": 24,
              "paddingVertical": 4,
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "fontFamily": "RedHatDisplayRegular",
                "fontSize": 12,
                "lineHeight": 24,
              },
            ]
          }
        >
          subtotal
        </Text>
        <Text
          style={
            [
              {
                "fontFamily": "RedHatDisplayRegular",
                "fontSize": 12,
                "lineHeight": 24,
              },
            ]
          }
        >
          <Text
            style={
              [
                [],
                {
                  "color": undefined,
                },
              ]
            }
            testID="undefined/value"
          >
            $
            19.00
          </Text>
        </Text>
      </View>
      <View
        style={
          [
            {
              "display": "flex",
              "flexDirection": "row",
              "fontFamily": "RedHatDisplayRegular",
              "fontSize": 12,
              "justifyContent": "space-between",
              "lineHeight": 24,
              "paddingVertical": 4,
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "display": "flex",
                "flexDirection": "row",
              },
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontFamily": "RedHatDisplayRegular",
                  "fontSize": 12,
                  "lineHeight": 24,
                },
              ]
            }
          >
            Simplex
             
            fee
          </Text>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            focusable={true}
            hitSlop={
              {
                "bottom": 10,
                "left": 10,
                "right": 10,
                "top": 10,
              }
            }
            nativeBackgroundAndroid={
              {
                "attribute": "selectableItemBackground",
                "rippleRadius": undefined,
                "type": "ThemeAttrAndroid",
              }
            }
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "marginLeft": 6,
                  "position": "relative",
                  "top": 5,
                },
              ]
            }
          >
            <svg
              fill="none"
              height={28}
              viewBox="0 0 16 16"
              width={28}
            >
              <circle
                cx="8"
                cy="8"
                r="7"
                stroke="#757575"
                strokeWidth="1.25"
              />
              <path
                d="M8 12V7M8 6V5"
                stroke="#757575"
                strokeWidth="1.25"
              />
            </svg>
          </View>
        </View>
        <Text>
          <Text
            style={
              [
                [
                  {
                    "fontFamily": "RedHatDisplayRegular",
                    "fontSize": 12,
                    "lineHeight": 24,
                  },
                ],
                {
                  "color": undefined,
                },
              ]
            }
            testID="undefined/value"
          >
            $
            7.00
          </Text>
        </Text>
      </View>
      <View
        style={
          [
            {
              "display": "flex",
              "flexDirection": "row",
              "fontFamily": "RedHatDisplayRegular",
              "fontSize": 12,
              "justifyContent": "space-between",
              "lineHeight": 24,
              "paddingVertical": 4,
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "fontFamily": "RedHatDisplayRegular",
                "fontSize": 12,
                "lineHeight": 24,
              },
              {
                "fontFamily": "RedHatDisplaySemiBold",
                "fontSize": 12,
                "lineHeight": 24,
              },
            ]
          }
        >
          Total
        </Text>
        <Text
          style={
            [
              {
                "fontFamily": "RedHatDisplayRegular",
                "fontSize": 12,
                "lineHeight": 24,
              },
              {
                "fontFamily": "RedHatDisplaySemiBold",
                "fontSize": 12,
                "lineHeight": 24,
              },
            ]
          }
        >
          <Text
            style={
              [
                [
                  {
                    "fontFamily": "RedHatDisplaySemiBold",
                    "fontSize": 12,
                    "lineHeight": 24,
                  },
                ],
                {
                  "color": undefined,
                },
              ]
            }
            testID="undefined/value"
          >
            $
            26.00
          </Text>
        </Text>
      </View>
    </View>
    <View
      pointerEvents="box-none"
    >
      <View
        pointerEvents="box-none"
        style={
          [
            {
              "borderRadius": 15,
              "flexGrow": 1,
              "width": "100%",
            },
            {},
          ]
        }
      >
        <View
          style={
            [
              {
                "flexDirection": "column",
              },
              {
                "margin": 16,
              },
            ]
          }
        >
          <View
            style={
              [
                {
                  "overflow": "hidden",
                },
                {
                  "borderRadius": 100,
                },
              ]
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": true,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              focusable={false}
              nativeBackgroundAndroid={
                {
                  "attribute": "selectableItemBackground",
                  "rippleRadius": undefined,
                  "type": "ThemeAttrAndroid",
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "#2F4ACD",
                    "flexDirection": "row",
                    "flexGrow": 1,
                    "height": 48,
                    "justifyContent": "center",
                    "opacity": 0.25,
                    "paddingHorizontal": 24,
                    "paddingVertical": 5,
                    "width": "100%",
                  },
                  undefined,
                ]
              }
            >
              <View
                style={
                  {
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <BVLinearGradient
                  borderRadii={
                    [
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                    ]
                  }
                  colors={
                    [
                      -13677875,
                      -15194777,
                    ]
                  }
                  endPoint={
                    [
                      1,
                      0,
                    ]
                  }
                  locations={null}
                  startPoint={
                    [
                      0,
                      0,
                    ]
                  }
                  style={
                    {
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                />
              </View>
              <Text
                maxFontSizeMultiplier={1}
                style={
                  {
                    "color": "#FFFFFF",
                    "fontFamily": "RedHatDisplaySemiBold",
                    "fontSize": 12,
                    "fontWeight": "normal",
                    "lineHeight": 24,
                    "marginLeft": 0,
                    "marginRight": 0,
                  }
                }
              >
                continueToProvider, {"provider":"Simplex"}
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
